Fix logo image not aligning properly

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -76,6 +76,7 @@ a
 	float: left
 	height: 64px
 	margin-right: 20px
+	margin-top: 10px
 
 .logo_right_container
 	float: left
